--- a/3rdParty/CMakeLists.txt
+++ b/3rdParty/CMakeLists.txt
@@ -1,2 +1,2 @@
 
-set(REFERENCE_FMU_DIR "${CMAKE_CURRENT_LIST_DIR}/reference_fmu")
+# set(REFERENCE_FMU_DIR "${CMAKE_CURRENT_LIST_DIR}/reference_fmu")
