--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,10 @@ message("CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}\n")
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_subdirectory(3rdParty)
-
 add_subdirectory(libs)
+
+# Tests
+include(CTest)
+
+add_subdirectory(test)
 
