--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -21,6 +21,8 @@ classifiers = [
 ]
 
 dependencies = [
+  "fmpy",
+  "matplotlib",
 ]
 
 [project.urls]
@@ -29,6 +31,7 @@ Repository = "https://github.com/jkCXf9X4/scenario_fmu"
 [project.scripts]
 scenario-fmu-package = "scenario_fmu_generator.cli_fmu_packager:main"
 scenario-fmu-ssv = "scenario_fmu_generator.cli_ssp_params:main"
+scenario-fmu-run = "scenario_fmu_generator.cli_fmu_runner:main"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/scenario_fmu_generator"]
